fixed mobile overflow, darn row in row, also removed sail-experience as not live any more

--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,9 @@ p {
 }
 
 .row-footer {
-	background-color: lightgrey;
+/*	background-color: lightgrey;
 	-webkit-clip-path: polygon(0 0%, 100% 4%, 100% 100%, 0% 100%);
-	clip-path: polygon(0 0%, 100% 4%, 100% 100%, 0% 100%);
+	clip-path: polygon(0 0%, 100% 4%, 100% 100%, 0% 100%);*/
 	padding: 65px 10px;
 }
 
